src/test/ui/dep-graph/dep-graph-check-attr.stderr
error: attribute requires -Z query-dep-graph to be enabled
  --> $DIR/dep-graph-check-attr.rs:8:1
   |
LL | #[rustc_clean(hir_owner)]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^

error: attribute requires -Z query-dep-graph to be enabled
  --> $DIR/dep-graph-check-attr.rs:11:1
   |
LL | #[rustc_if_this_changed(hir_owner)]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: attribute requires -Z query-dep-graph to be enabled
  --> $DIR/dep-graph-check-attr.rs:16:1
   |
LL | #[rustc_clean(hir_owner)]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^

error: attribute requires -Z query-dep-graph to be enabled
  --> $DIR/dep-graph-check-attr.rs:19:1
   |
LL | #[rustc_then_this_would_need(variances_of)]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 4 previous errors

